# andrei-skill-marketplace

./: .env.example  .gitignore  .gitmodules  README.md  SHOWS.md
.claude-plugin/: marketplace.json
.github/workflows/: publish-elternportal.yml
output/: 2026-04-14-chapters.json  2026-04-14-podcast.md  2026-04-15-podcast.md  TRACKER.md  claude-code-2.1.108-brief.md  claude-code-2.1.109-brief.md
plugins/ai-espresso-skill/: .gitignore  Makefile  README.md  guidelines.md  sources.md
plugins/ai-espresso-skill/.claude-plugin/: plugin.json
plugins/ai-espresso-skill/evals/: evals.json  (+1 more)
plugins/aws-ses-mailer-skill/: .env.example  README.md
plugins/claude-code-release-podcast/: README.md
plugins/daily-ai-espresso-podcast/: README.md
plugins/elternportal/: .env.example  .mcp.json  MCP-SERVER.md  README.md  pyproject.toml
plugins/elternportal/.claude-plugin/: plugin.json
plugins/elternportal/elternportal_mcp/: __main__.py  auth.py  requirements.txt  server.py
plugins/elternportal/elternportal_mcp/parsers/: schwarzes_brett.py  termine.py
plugins/elternportal/skills/elternportal/: SKILL.md
plugins/elternportal/skills/elternportal-elternbriefe/: SKILL.md
plugins/elternportal/skills/elternportal-elternbriefe/scripts/: fetch.py
plugins/elternportal/skills/elternportal-vertretungsplan/: SKILL.md
plugins/elternportal/skills/elternportal-vertretungsplan/scripts/: fetch.py
plugins/fish-audio/: .mcp.json  README.md  requirements.txt
plugins/podcast-skill/: README.md
plugins/pushover/: .mcp.json  README.md
plugins/transistor/: .mcp.json  README.md
(+42 files in other folders)
